tooling/nargo_cli/tests/snapshots/execution_success/regression_8662/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
struct Context {
    f: fn() -> bool,
}

fn main(c: bool) -> pub bool {
    let mut ctx: Context = Context { f: bar };
    if c { ctx.f = qux; };
    foo(&mut ctx)
}

fn foo(ctx: &mut Context) -> bool {
    (ctx.f)()
}

fn bar() -> bool {
    false
}

fn qux() -> bool {
    true
}
